@@ -68,7 +68,7 @@ class MigrationTest(PloneTestCase):
         self.failUnless(conversation.getComments().next())
         comment1 = conversation.values()[0]
         self.assert_(IComment.providedBy(comment1))
-        self.assertEquals(comment1.Title(), 'Jim on Document 1')
+        self.assertEquals(comment1.Title(), 'My Title')
         self.assertEquals(comment1.text, '<p>My Text</p>\n')
         self.assertEquals(comment1.mime_type, 'text/html')
         self.assertEquals(comment1.Creator(), 'Jim')
